--- a/vscode-html/package.json
+++ b/vscode-html/package.json
@@ -9,7 +9,6 @@
   },
   "main": "./out/htmlServerMain",
   "dependencies": {
-    "typescript": "^3.8.3",
     "vscode-css-languageservice": "^4.1.0",
     "vscode-html-languageservice": "3.0.4-next.15",
     "vscode-languageserver": "^6.1.1",
@@ -22,7 +21,8 @@
     "glob": "^7.1.6",
     "mocha": "^7.0.1",
     "mocha-junit-reporter": "^1.23.3",
-    "mocha-multi-reporters": "^1.1.7"
+    "mocha-multi-reporters": "^1.1.7",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "compile": "npx gulp compile-extension:html-language-features-server",
