Add release script

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,8 @@ codecov.yml export-ignore
 tests/ export-ignore
 tox.ini export-ignore
 unittesting.json export-ignore
+
+# Release script
+.release.json export-ignore
+scripts export-ignore
+VERSION export-ignore
