--- a/language-server/package.json
+++ b/language-server/package.json
@@ -9,6 +9,7 @@
   },
   "main": "./out/htmlServerMain",
   "dependencies": {
+    "typescript": "^3.9.5",
     "vscode-css-languageservice": "^4.1.2",
     "vscode-html-languageservice": "^3.1.0-next.2",
     "vscode-languageserver": "^6.1.1",
@@ -21,8 +22,7 @@
     "glob": "^7.1.6",
     "mocha": "^7.1.2",
     "mocha-junit-reporter": "^1.23.3",
-    "mocha-multi-reporters": "^1.1.7",
-    "typescript": "^3.9.5"
+    "mocha-multi-reporters": "^1.1.7"
   },
   "scripts": {
     "compile": "npx gulp compile-extension:html-language-features-server",
