--- a/language-server/package.json
+++ b/language-server/package.json
@@ -7,12 +7,12 @@
   "engines": {
     "node": "*"
   },
-  "main": "./out/htmlServerMain",
+  "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "typescript": "^3.9.5",
-    "vscode-css-languageservice": "^4.1.2",
-    "vscode-html-languageservice": "^3.1.0-next.2",
-    "vscode-languageserver": "^6.1.1",
+    "typescript": "^3.9.6",
+    "vscode-css-languageservice": "^4.3.0",
+    "vscode-html-languageservice": "^3.1.0",
+    "vscode-languageserver": "7.0.0-next.3",
     "vscode-nls": "^4.1.2",
     "vscode-uri": "^2.1.2"
   },
