--- a/language-server/package.json
+++ b/language-server/package.json
@@ -9,9 +9,9 @@
   },
   "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "typescript": "^4.4.3",
-    "vscode-css-languageservice": "^5.1.5",
-    "vscode-html-languageservice": "^4.0.8",
+    "typescript": "^4.5.2",
+    "vscode-css-languageservice": "^5.1.9",
+    "vscode-html-languageservice": "^4.2.0",
     "vscode-languageserver": "^7.0.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-nls": "^5.0.0",
@@ -28,6 +28,6 @@
     "install-service-local": "yarn link vscode-css-languageservice && yarn link vscode-html-languageservice",
     "install-server-next": "yarn add vscode-languageserver@next",
     "install-server-local": "yarn link vscode-languageserver",
-    "test": "npm run compile && node ./test/index.js"
+    "test": "yarn compile && node ./test/index.js"
   }
 }
