--- a/language-server/package.json
+++ b/language-server/package.json
@@ -9,12 +9,12 @@
   },
   "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "typescript": "^4.7.2",
+    "typescript": "^4.7.4",
     "vscode-css-languageservice": "^6.0.1",
-    "vscode-html-languageservice": "^5.0.0",
-    "vscode-languageserver": "^8.0.1",
+    "vscode-html-languageservice": "^5.0.1",
+    "vscode-languageserver": "^8.0.2-next.4",
     "vscode-languageserver-textdocument": "^1.0.4",
-    "vscode-nls": "^5.0.1",
+    "vscode-nls": "^5.1.0",
     "vscode-uri": "^3.0.3"
   },
   "devDependencies": {
