--- a/language-server/package.json
+++ b/language-server/package.json
@@ -9,13 +9,13 @@
   },
   "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "typescript": "^4.8.4",
-    "vscode-css-languageservice": "^6.1.1",
-    "vscode-html-languageservice": "^5.0.2",
-    "vscode-languageserver": "^8.1.0-next.1",
-    "vscode-languageserver-textdocument": "^1.0.7",
-    "vscode-nls": "^5.2.0",
-    "vscode-uri": "^3.0.6"
+    "@vscode/l10n": "^0.0.11",
+    "typescript": "^4.9.4",
+    "vscode-css-languageservice": "^6.2.2",
+    "vscode-html-languageservice": "^5.0.4",
+    "vscode-languageserver": "^8.1.0-next.6",
+    "vscode-languageserver-textdocument": "^1.0.8",
+    "vscode-uri": "^3.0.7"
   },
   "devDependencies": {
     "@types/mocha": "^9.1.1",
