--- a/language-server/package.json
+++ b/language-server/package.json
@@ -10,16 +10,16 @@
   "main": "./out/node/htmlServerMain",
   "dependencies": {
     "@vscode/l10n": "^0.0.11",
-    "typescript": "^4.9.4",
-    "vscode-css-languageservice": "^6.2.2",
+    "typescript": "^5.0.2",
+    "vscode-css-languageservice": "^6.2.4",
     "vscode-html-languageservice": "^5.0.4",
-    "vscode-languageserver": "^8.1.0-next.6",
+    "vscode-languageserver": "^8.1.0",
     "vscode-languageserver-textdocument": "^1.0.8",
     "vscode-uri": "^3.0.7"
   },
   "devDependencies": {
     "@types/mocha": "^9.1.1",
-    "@types/node": "16.x"
+    "@types/node": "^16.18.18"
   },
   "scripts": {
     "compile": "npx gulp compile-extension:html-language-features-server",
