--- a/language-server/package.json
+++ b/language-server/package.json
@@ -9,17 +9,17 @@
   },
   "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "typescript": "^4.8.4",
-    "vscode-css-languageservice": "^6.1.1",
-    "vscode-html-languageservice": "^5.0.2",
-    "vscode-languageserver": "^8.1.0-next.1",
-    "vscode-languageserver-textdocument": "^1.0.7",
-    "vscode-nls": "^5.2.0",
-    "vscode-uri": "^3.0.6"
+    "@vscode/l10n": "^0.0.14",
+    "typescript": "^5.2.0-dev.20230807",
+    "vscode-css-languageservice": "^6.2.6",
+    "vscode-html-languageservice": "^5.0.6",
+    "vscode-languageserver": "^8.2.0-next.1",
+    "vscode-languageserver-textdocument": "^1.0.8",
+    "vscode-uri": "^3.0.7"
   },
   "devDependencies": {
     "@types/mocha": "^9.1.1",
-    "@types/node": "16.x"
+    "@types/node": "^18.17.6"
   },
   "scripts": {
     "compile": "npx gulp compile-extension:html-language-features-server",
