--- a/language-server/package.json
+++ b/language-server/package.json
@@ -9,11 +9,11 @@
   },
   "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "@vscode/l10n": "^0.0.16",
-    "typescript": "^5.3.2",
-    "vscode-css-languageservice": "^6.2.10",
-    "vscode-html-languageservice": "^5.1.1",
-    "vscode-languageserver": "^9.0.1",
+    "@vscode/l10n": "^0.0.18",
+    "typescript": "^5.4.5",
+    "vscode-css-languageservice": "^6.2.13",
+    "vscode-html-languageservice": "^5.2.0",
+    "vscode-languageserver": "^10.0.0-next.2",
     "vscode-languageserver-textdocument": "^1.0.11",
     "vscode-uri": "^3.0.8"
   },
