--- a/language-server/package.json
+++ b/language-server/package.json
@@ -10,10 +10,10 @@
   "main": "./out/node/htmlServerMain",
   "dependencies": {
     "@vscode/l10n": "^0.0.18",
-    "typescript": "^5.5.0-dev.20240603",
-    "vscode-css-languageservice": "^6.2.13",
-    "vscode-html-languageservice": "^5.2.0",
-    "vscode-languageserver": "^10.0.0-next.2",
+    "typescript": "^5.5.3",
+    "vscode-css-languageservice": "^6.3.0",
+    "vscode-html-languageservice": "^5.3.0",
+    "vscode-languageserver": "^10.0.0-next.6",
     "vscode-languageserver-textdocument": "^1.0.11",
     "vscode-uri": "^3.0.8"
   },
