--- a/language-server/package.json
+++ b/language-server/package.json
@@ -9,16 +9,16 @@
   },
   "main": "./out/node/htmlServerMain",
   "dependencies": {
-    "@vscode/l10n": "^0.0.18",
-    "typescript": "^5.8.3",
-    "vscode-css-languageservice": "^6.3.6",
-    "vscode-html-languageservice": "^5.5.0",
-    "vscode-languageserver": "^10.0.0-next.13",
-    "vscode-languageserver-textdocument": "^1.0.12",
-    "vscode-uri": "^3.1.0"
+    "@vscode/l10n": "0.0.18",
+    "typescript": "5.8.3",
+    "vscode-css-languageservice": "6.3.6",
+    "vscode-html-languageservice": "5.5.0",
+    "vscode-languageserver": "10.0.0-next.13",
+    "vscode-languageserver-textdocument": "1.0.12",
+    "vscode-uri": "3.1.0"
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.1",
+    "@types/mocha": "9.1.1",
     "@types/node": "22.x"
   },
   "scripts": {
